Add helpline fragment
-Removed faulty code
-Added a new fragment

--- a/app/src/main/res/values/array.xml
+++ b/app/src/main/res/values/array.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <array name="contents">
-        <item>A</item>
+        <item>Helpline</item>
         <item>B</item>
         <item>C</item>
         <item>D</item>
