--- a/app/src/main/res/values/array.xml
+++ b/app/src/main/res/values/array.xml
@@ -2,7 +2,7 @@
 <resources>
     <array name="contents">
         <item>Helpline</item>
-        <item>B</item>
+        <item>Trusted Contacts</item>
         <item>C</item>
         <item>D</item>
     </array>
