--- a/app/src/main/res/layout/fragment_helpline.xml
+++ b/app/src/main/res/layout/fragment_helpline.xml
@@ -18,7 +18,7 @@
             android:layout_width="237dp"
             android:layout_height="wrap_content"
             android:text="Women HelpLine Numbers:"
-            android:textSize="32dp"/>
+            android:textSize="32sp"/>
 
         <LinearLayout
             android:layout_width="wrap_content"
@@ -30,13 +30,13 @@
                 android:layout_height="wrap_content"
                 android:text="Police Control Room : "
                 android:paddingBottom="10dp"
-                android:textSize="18dp"/>
+                android:textSize="18sp"/>
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="100"
                 android:paddingTop="10dp"
-                android:textSize="18dp"/>
+                android:textSize="18sp"/>
         </LinearLayout>
 
         <LinearLayout
@@ -49,13 +49,13 @@
                 android:layout_height="wrap_content"
                 android:text="Transport Helpline :"
                 android:paddingTop="10dp"
-                android:textSize="18dp"/>
+                android:textSize="18sp"/>
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="9604-400-400"
                 android:paddingTop="10dp"
-                android:textSize="18dp"/>
+                android:textSize="18sp"/>
 
         </LinearLayout>
 
@@ -69,13 +69,13 @@
                 android:layout_height="wrap_content"
                 android:text="Delhi Police Post Box No. :"
                 android:paddingTop="10dp"
-                android:textSize="18dp"/>
+                android:textSize="18sp"/>
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="5353"
                 android:paddingTop="10dp"
-                android:textSize="18dp"/>
+                android:textSize="18sp"/>
 
         </LinearLayout>
 
@@ -89,13 +89,13 @@
                 android:layout_height="wrap_content"
                 android:text="Anti-Stalking Number :"
                 android:paddingTop="10dp"
-                android:textSize="18dp"/>
+                android:textSize="18sp"/>
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="1096"
                 android:paddingTop="10dp"
-                android:textSize="18dp"/>
+                android:textSize="18sp"/>
 
         </LinearLayout>
 
@@ -109,13 +109,13 @@
                 android:layout_height="wrap_content"
                 android:text="DTC complaint Number :"
                 android:paddingTop="10dp"
-                android:textSize="18dp"/>
+                android:textSize="18sp"/>
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="24351763, 9718190047"
                 android:paddingTop="10dp"
-                android:textSize="18dp"/>
+                android:textSize="18sp"/>
 
         </LinearLayout>
 
@@ -129,13 +129,13 @@
                 android:layout_height="wrap_content"
                 android:text="DMRC Helpline Number:"
                 android:paddingTop="10dp"
-                android:textSize="18dp"/>
+                android:textSize="18sp"/>
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="155370"
                 android:paddingTop="10dp"
-                android:textSize="18dp"/>
+                android:textSize="18sp"/>
 
         </LinearLayout>
 
@@ -149,13 +149,13 @@
                 android:layout_height="wrap_content"
                 android:text="24hrs Women Helpline :"
                 android:paddingTop="10dp"
-                android:textSize="18dp"/>
+                android:textSize="18sp"/>
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="1096"
                 android:paddingTop="10dp"
-                android:textSize="18dp"/>
+                android:textSize="18sp"/>
 
         </LinearLayout>
 
@@ -169,13 +169,13 @@
                 android:layout_height="wrap_content"
                 android:text="National Women Commission  :"
                 android:paddingTop="10dp"
-                android:textSize="18dp"/>
+                android:textSize="18sp"/>
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="011 - 26942369, 26944740"
                 android:paddingTop="10dp"
-                android:textSize="18dp"/>
+                android:textSize="18sp"/>
 
         </LinearLayout>
 
