--- a/app/src/main/res/layout/trusted_contacts_row.xml
+++ b/app/src/main/res/layout/trusted_contacts_row.xml
@@ -5,50 +5,29 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <android.support.v7.widget.CardView
+        android:layout_marginBottom="5dp"
         android:layout_width="match_parent"
-        app:contentPadding="10dp"
-        android:layout_height="wrap_content" >
+        android:layout_height="wrap_content" >>
         <LinearLayout
             android:layout_width="match_parent"
-            android:orientation="vertical"
+            android:orientation="horizontal"
+            android:padding="10dp"
+            android:weightSum="2"
             android:layout_height="match_parent">
-<LinearLayout
-    android:layout_width="match_parent"
-
-    android:layout_height="match_parent"
-    android:weightSum="2">
-        <TextView
-            android:text="Name: "
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-             />
-
-        <TextView
-            android:text="Naman Arora"
-            android:layout_width="wrap_content"
-            android:layout_weight="1"
-            android:layout_height="wrap_content"
-            android:id="@+id/name" />
-</LinearLayout>
-            <LinearLayout
+            <TextView
+                android:text="Phone: "
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:weightSum="2">
-                <TextView
-                    android:text="Email id: "
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    />
-
-                <TextView
-                    android:text="naman.arora11@gmail.com"
-                    android:layout_width="wrap_content"
-                    android:layout_weight="1"
-                    android:layout_height="wrap_content"
-                    android:id="@+id/email" />
-            </LinearLayout>
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:textSize="20sp"
+                 />
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:textSize="20sp"
+                android:layout_weight="1"
+                android:id="@+id/phonetv" />
         </LinearLayout>
     </android.support.v7.widget.CardView>
 </LinearLayout>
+
